--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "floon",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1",
+    "@discordjs/builders": "^1.1.0",
+    "@discordjs/rest": "^1.0.1",
+    "discord.js": "^14.1.2",
     "dotenv": "^16.0.1",
     "eslint": "^7.17.0"
   }
